--- a/networking/docker-compose.yml
+++ b/networking/docker-compose.yml
@@ -2,9 +2,21 @@ version: '2'
 services:
   a:
     image: tutum/hello-world
+    networks:
+      - frontend
   b:
     image: tutum/hello-world
+    networks:
+      - frontend
+      - backend
+
+  c:
+   image: tutum/hello-world
+   networks:
+      - backend
 
 networks:
-  default:
+  frontend:
+    driver: bridge
+  backend:
     driver: bridge
